# metis

./: .dockerignore  .editorconfig  .gitignore  .importlinter  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
apps/web/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
deploy/: docker-compose.yml  pyproject.toml  runbook.md
deploy/backup/: backup-job.yml  restore-drill.yml  run-backup.sh
deploy/compose/: Caddyfile  profiles.cloud.yml  profiles.external-model.yml  profiles.gpu.yml  profiles.local.yml  profiles.telegram.yml  proxy.yml
deploy/env/: .env.example
deploy/images/: gateway.Dockerfile  ingest-worker.Dockerfile  maintainer-worker.Dockerfile  runtime-worker.Dockerfile  tdlib.Dockerfile
deploy/migrate/: entrypoint.sh
deploy/observability/: alerts.yml  otel-collector.yml
deploy/observability/dashboards/: dashboards.md
deploy/src/metis_deploy/: __init__.py  backup_job.py  health.py  migrations.py  observability.py  profiles.py  restore_drill.py  setup.py
deploy/tests/: test_alerts.py  test_backup_restore_fixture.py  test_clean_start.py  test_healthchecks.py  test_proxy.py  test_restore_drill.py  test_setup.py  test_telegram_profile.py
docs/: README.md  package-decomposition.md  uxui.md
docs/adr/: 0001-monorepo-and-uv-workspace.md  0002-test-framework-pytest.md  0003-import-boundary-enforcement.md  0004-lint-format-ruff.md  0005-typecheck-mypy-strict.md  0006-config-pydantic-settings.md  0007-id-strategy-prefixed-uuid7.md  0008-async-first-io-interfaces.md  0009-service-entrypoint-convention.md  0010-protocol-schema-versioning-and-interface-placement.md  0011-core-persistence-and-audit-chaining.md  0012-ingestion-parsers-and-deterministic-extraction.md  0013-model-router-placement-and-providers.md  0014-memory-core-consolidation-and-embeddings.md  0015-maintainer-scheduling-and-memory-substrate.md  0016-wiki-compiler-and-git-projection.md  0017-retrieval-and-query-runtime.md  0018-skill-runtime-and-sandboxing.md  0019-runtime-agent-integration-and-taint-boundary.md  0020-external-connectors-and-replayable-ingestion.md  0021-api-gateway-and-operator-surfaces.md  0022-evaluation-harness-and-golden-benchmark.md  0023-security-privacy-hardening.md  0024-deployment-and-operational-readiness.md  README.md  template.md
docs/architecture/: package-boundaries.md
docs/plans/: README.md  high-level-implementation-plan.md  server-deployment-product-roadmap.md  server-deployment-stage-1.md  server-deployment-stage-2.md  server-deployment-stage-3.md  sources-fixes-tickets.md  stage-00-repo-guardrails.md  stage-01-protocol.md  stage-02-core.md  stage-03-ingestion.md  stage-04-model-router.md  stage-05-memory-core.md  stage-06-maintainer.md  (+10 more)
eval/: pyproject.toml
eval/fixtures/: README.md
eval/fixtures/golden_workspace/: acquisition.md  company.md  founding_correction.md  roadmap.md  zeta.md
eval/fixtures/prompt_injection/: exfiltrate.md
eval/fixtures/skills/notify/: main.py  manifest.yaml  output_schema.json
eval/src/metis_eval/: __init__.py  engine.py  golden.py  judges.py  report.py  runner.py  support.py  thresholds.py  tokens.py
eval/src/metis_eval/ci/: __init__.py  small_golden.py
eval/src/metis_eval/dimensions/: __init__.py  claim_extraction.py  contradiction.py  groundedness.py  parse_quality.py  policy.py  retrieval.py  skill_safety.py  span_accuracy.py  wiki_loss.py
eval/src/metis_eval/memory/: __init__.py  compare.py  fixtures.py
eval/src/metis_eval/retrieval/: __init__.py  compare.py
eval/tests/: conftest.py  test_memory_eval.py  test_retrieval_eval.py  test_runner_smoke.py  test_thresholds_enforced.py
services/gateway/: .env.example  pyproject.toml
services/gateway/src/metis_gateway/: __init__.py  actions.py  app.py  auth.py  backend.py  config_store.py  deps.py  errors.py  execution.py  models.py  schemas.py  settings.py  telegram_connect.py  tokens.py
services/gateway/src/metis_gateway/routers/: __init__.py  actions.py  admin.py  approvals.py  audit.py  contradictions.py  documents.py  evidence.py  ingestion.py  invites.py  jobs.py  memory.py  oauth.py  providers.py  query.py  runtime.py  skills.py  sources.py  telegram.py  upload.py  users.py  wiki.py  workspaces.py
services/gateway/src/metis_gateway/web/: index.html
services/gateway/tests/: conftest.py  test_action_execution.py  test_actions.py  test_admin_config.py  test_answer_mode.py  test_approvals_auditable.py  test_boot.py  test_command_interpreter.py  test_connectors.py  test_contradictions.py  test_deployment_config.py  test_digest.py  test_documents.py  test_durable_approval_queue.py  test_embedding_router.py  test_engine_loop_e2e.py  test_erasure.py  test_error_envelope.py  test_evidence.py  test_invites.py  test_job_retry.py  test_memory_review.py  test_model_fallback.py  test_model_policy_and_spend.py  test_oauth_flow.py  test_postgres_backend.py  test_provider_plane.py  test_providers.py  test_query_citations.py  test_runtime_research.py  test_source_erasure.py  test_starter_questions.py  test_sync.py  test_telegram_discovery.py  test_telegram_source.py  test_telegram_tdlib_connect.py  test_upload.py  test_user_erasure.py  test_web.py  test_web_spa.py  (+1 more)
services/gateway/tests/fixtures/skills/announce/: main.py  manifest.yaml
services/gateway/tests/fixtures/skills/echo/: main.py  manifest.yaml  output_schema.json
services/ingest-worker/: .env.example  pyproject.toml
services/ingest-worker/src/metis_ingest_worker/: __init__.py  __main__.py  app.py  settings.py
services/ingest-worker/tests/: test_boot.py  test_vision_caller.py
services/maintainer-worker/: .env.example  pyproject.toml
services/maintainer-worker/src/metis_maintainer_worker/: __init__.py  app.py  settings.py
services/maintainer-worker/tests/: test_boot.py
services/runtime-worker/: .env.example  pyproject.toml
services/runtime-worker/src/metis_runtime_worker/: __init__.py  app.py  settings.py
services/runtime-worker/tests/: test_boot.py
(+110 files in other folders)
