# Metis monorepo root.
#
# This is a uv *workspace* root, not an installable package. It aggregates the
# six libraries under packages/ and the four services under services/, pins the
# shared dev toolchain, and centralizes tool configuration (pytest, importlinter
# config lives in .importlinter, ruff in ruff.toml, mypy in mypy.ini).
[project]
name = "metis"
version = "0.0.0"
description = "Metis workspace memory/context engine (monorepo root)"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
# The root orchestrates the workspace; it is never built or published itself.
package = false

[tool.uv.workspace]
members = ["packages/*", "services/*", "eval"]

# Cross-package dependencies resolve from the workspace rather than PyPI.
# Declared once at the root and inherited by every member.
[tool.uv.sources]
metis-protocol = { workspace = true }
metis-core = { workspace = true }
metis-ingestion = { workspace = true }
metis-maintainer = { workspace = true }
metis-runtime = { workspace = true }
metis-skills = { workspace = true }

# Shared dev toolchain (ADRs 0002, 0003, 0004, 0005). Installed into the
# workspace environment by `uv sync`; default groups install automatically.
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "hypothesis>=6",
    "ruff>=0.6",
    "mypy>=1.11",
    "import-linter>=2.1",
    # Present so the pydantic mypy plugin and service settings always resolve
    # when typechecking, regardless of which members are synced.
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    # metis-core tests run the protocol contract suites against real engines.
    "testcontainers[postgres,minio]>=4.8",
    # Type stubs so the boto3-backed object store typechecks under mypy --strict.
    "boto3-stubs[s3]>=1.34",
    # Sync driver used only by the testcontainers Postgres readiness check.
    "psycopg2-binary>=2.9",
]

[tool.pytest.ini_options]
minversion = "8.0"
# Collect the root architecture tests plus every package/service/eval test suite.
testpaths = ["tests", "packages", "services", "eval"]
# importlib mode lets same-named test files (test_smoke.py, test_boot.py) coexist
# across packages without __init__.py shims or sys.path collisions.
addopts = "-q --strict-markers --strict-config --import-mode=importlib"
asyncio_mode = "auto"
# Starlette's TestClient warns that it still rides on httpx; transitional upstream noise.
filterwarnings = ["ignore:Using `httpx` with `starlette.testclient` is deprecated"]
# Extend (not replace) pytest's default ignores: ".*" keeps .venv/.hypothesis/.git
# skipped; "src" keeps package source out of collection (it holds no tests).
norecursedirs = [".*", "src", "build", "dist", "*.egg", "*.egg-info", "node_modules"]
