[project]
name = "metis-deploy"
version = "0.0.0"
description = "Metis deployment and operational readiness: compose stack, model profiles, health, backup"
requires-python = ">=3.12"
dependencies = [
    "metis-protocol",
    "metis-core",
    "metis-ingestion",
    "metis-maintainer",
    "metis-runtime",
    "alembic>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metis_deploy"]
