[project]
name = "metis-deploy"
version = "0.0.0"
description = "Metis deployment and operational readiness: compose stack, model profiles, health, backup"
requires-python = ">=3.12"
dependencies = [
    "metis-protocol",
    "metis-core",
    "metis-ingestion",
    "metis-maintainer",
    "metis-runtime",
    "alembic>=1.13",
]

[project.scripts]
metis-restore-drill = "metis_deploy.restore_drill:main"
metis-setup = "metis_deploy.setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metis_deploy"]
