[project]
name = "metis-eval"
version = "0.0.0"
description = "Metis evaluation harness: golden fixtures and quality comparisons"
requires-python = ">=3.12"
dependencies = [
    "metis-protocol",
    "metis-core",
    "metis-maintainer",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metis_eval"]
