[project]
name = "metis-gateway"
version = "0.0.0"
description = "Metis API gateway service"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.4",
]

[project.scripts]
metis-gateway = "metis_gateway.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metis_gateway"]
