[project]
name = "metis-gateway"
version = "0.0.0"
description = "Metis API gateway service"
requires-python = ">=3.12"
dependencies = [
    "metis-protocol",
    "metis-core",
    "metis-ingestion",
    "metis-maintainer",
    "metis-runtime",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "ddgs>=6",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    # Sync Postgres driver for the durable connector secret store (PostgresSecretStore).
    "psycopg2-binary>=2.9",
]

[project.scripts]
metis-gateway = "metis_gateway.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metis_gateway"]
