[project]
name = "metis-ingest-worker"
version = "0.0.0"
description = "Metis ingestion worker service"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.4",
    "metis-core",
    "metis-ingestion",
    # Sync Postgres driver for the durable connector secret store (PostgresSecretStore).
    "psycopg2-binary>=2.9",
]

[project.scripts]
metis-ingest-worker = "metis_ingest_worker.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metis_ingest_worker"]
