[project]
name = "metis-runtime-worker"
version = "0.0.0"
description = "Metis runtime worker service"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.4",
    "metis-core",
    "metis-runtime",
]

[project.scripts]
metis-runtime-worker = "metis_runtime_worker.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metis_runtime_worker"]
